--- a/winbuild/sgminer.vcxproj
+++ b/winbuild/sgminer.vcxproj
@@ -282,6 +282,7 @@
     <ClCompile Include="..\algorithm\eth-sha3.c" />
     <ClCompile Include="..\algorithm\ethash.c" />
     <ClCompile Include="..\algorithm\ethgencache.c" />
+    <ClCompile Include="..\algorithm\hsr.c" />
     <ClCompile Include="..\algorithm\lyra2.c" />
     <ClCompile Include="..\algorithm\lyra2re.c" />
     <ClCompile Include="..\algorithm\lyra2rev2.c" />
@@ -347,6 +348,7 @@
     <ClCompile Include="..\sph\simd.c" />
     <ClCompile Include="..\sph\skein.c" />
     <ClCompile Include="..\algorithm\twecoin.c" />
+    <ClCompile Include="..\sph\sm3.c" />
     <ClCompile Include="..\sph\whirlpool.c" />
     <ClCompile Include="..\sysfs-gpu-controls.c" />
     <ClCompile Include="..\util.c" />
@@ -364,6 +366,7 @@
     <ClInclude Include="..\algorithm\equihash.h" />
     <ClInclude Include="..\algorithm\eth-sha3.h" />
     <ClInclude Include="..\algorithm\ethash.h" />
+    <ClInclude Include="..\algorithm\hsr.h" />
     <ClInclude Include="..\algorithm\lyra2.h" />
     <ClInclude Include="..\algorithm\lyra2re.h" />
     <ClInclude Include="..\algorithm\lyra2rev2.h" />
@@ -425,6 +428,7 @@
     <ClInclude Include="..\sph\sph_shavite.h" />
     <ClInclude Include="..\sph\sph_simd.h" />
     <ClInclude Include="..\sph\sph_skein.h" />
+    <ClInclude Include="..\sph\sph_sm3.h" />
     <ClInclude Include="..\sph\sph_types.h" />
     <ClInclude Include="..\algorithm\twecoin.h" />
     <ClInclude Include="..\sph\sph_whirlpool.h" />
